<resources>
    <string name="app_name" translatable="false">MiceWine</string>
    <string name="app_lang">en_US</string>
    <string name="box64_bigblock" translatable="false">BOX64_DYNAREC_BIGBLOCK</string>
    <string name="box64_strongmem" translatable="false">BOX64_DYNAREC_STRONGMEM</string>
    <string name="box64_weakbarrier" translatable="false">BOX64_DYNAREC_WEAKBARRIER</string>
    <string name="box64_pause" translatable="false">BOX64_DYNAREC_PAUSE</string>
    <string name="box64_x87double" translatable="false">BOX64_DYNAREC_X87DOUBLE</string>
    <string name="box64_fastnan" translatable="false">BOX64_DYNAREC_FASTNAN</string>
    <string name="box64_fastround" translatable="false">BOX64_DYNAREC_FASTROUND</string>
    <string name="box64_safeflags" translatable="false">BOX64_DYNAREC_SAFEFLAGS</string>
    <string name="box64_callret" translatable="false">BOX64_DYNAREC_CALLRET</string>
    <string name="box64_df" translatable="false">BOX64_DYNAREC_DF</string>
    <string name="box64_aligned_atomics" translatable="false">BOX64_DYNAREC_ALIGNED_ATOMICS</string>
    <string name="box64_nativeflags" translatable="false">BOX64_DYNAREC_NATIVEFLAGS</string>
    <string name="box64_bleeding_edge" translatable="false">BOX64_DYNAREC_BLEEDING_EDGE</string>
    <string name="box64_dynarec_wait" translatable="false">BOX64_DYNAREC_WAIT</string>
    <string name="box64_dynarec_dirty" translatable="false">BOX64_DYNAREC_DIRTY</string>
    <string name="box64_dynarec_forward" translatable="false">BOX64_DYNAREC_FORWARD</string>
    <string name="box64_log" translatable="false">BOX64_LOG</string>
    <string name="box64_avx" translatable="false">BOX64_AVX</string>
    <string name="box64_sse42" translatable="false">BOX64_SSE42</string>
    <string name="box64_mmap32" translatable="false">BOX64_MMAP32</string>
    <string name="box64_show_segv" translatable="false">BOX64_SHOWSEGV</string>
    <string name="box64_no_sigsegv" translatable="false">BOX64_NOSIGSEGV</string>
    <string name="box64_show_bt" translatable="false">BOX64_SHOWBT</string>
    <string name="box64_no_sigill" translatable="false">BOX64_NOSIGILL</string>
    <string name="box64_bigblock_desc">Enables/Disables Box64\'s Dynarec building BigBlock</string>
    <string name="box64_strongmem_desc">Enable/Disable simulation of Strong Memory model</string>
    <string name="box64_weakbarrier_desc">Tweaking the memory barriers to reduce the performance impact by STRONGMEM</string>
    <string name="box64_pause_desc">Enable/Disable x86 PAUSE emulation, which may help the performance of spinlocks</string>
    <string name="box64_x87double_desc">Force the use of Double for x87 emulation</string>
    <string name="box64_fastnan_desc">Enable/Disable generation of -NAN</string>
    <string name="box64_fastround_desc">Enable/Disable generation of precise x86 rounding</string>
    <string name="box64_safeflags_desc">Handling of flags on CALL/RET opcodes</string>
    <string name="box64_callret_desc">Optimization of CALL/RET opcodes (not compatible with jit/dynarec/smc)</string>
    <string name="box64_df_desc">Enable or disable the use of deferred flags.</string>
    <string name="box64_aligned_atomics_desc">Generated code for aligned atomics only</string>
    <string name="box64_nativeflags_desc">Generate code will use native flags if possible</string>
    <string name="box64_bleeding_edge_desc">Detect MonoBleedingEdge and apply conservative settings</string>
    <string name="box64_dynarec_wait_desc">Behavior with FillBlock is not available (FillBlock build Dynarec blocks and is not multithreaded)</string>
    <string name="box64_dynarec_dirty_desc">Allow continue running a block that is unprotected and potentially dirty</string>
    <string name="box64_dynarec_forward_desc">Define max allowed forward value when building block.</string>
    <string name="box64_log_desc">Box64 Log Level</string>
    <string name="box64_avx_desc">Enable or Disable Box64 AVX or AVX2 Emulation</string>
    <string name="box64_sse42_desc">Enable or Disable SSE4.2 capabilities</string>
    <string name="box64_mmap32_desc">Enable or Disable a Workaround for Vulkan Drivers that don\'t support \'VK_EXT_map_memory_placed\' extension</string>
    <string name="box64_show_segv_desc">Show Segfault signal even if a signal handler is present</string>
    <string name="box64_no_sigsegv_desc">Disable handling of SigSEGV. (Very useful for debugging.)</string>
    <string name="box64_show_bt_desc">Show some Backtrace (Native and Emulated) when a signal (SEGV, ILL or BUS) is caught</string>
    <string name="box64_no_sigill_desc">Disable handling of SigILL (to ease debugging mainly).</string>
    <string name="full_screen">Fullscreen</string>
    <string name="settings_title">Settings</string>
    <string name="settings_desc">Configure MiceWine</string>
    <string name="app_close">Exit</string>
    <string name="log_title">Log</string>
    <string name="log_desc">See MiceWine Logs</string>
    <string name="clear_log">Clear</string>
    <string name="desktop_mode_init">Desktop</string>
    <string name="about_title">About</string>
    <string name="home_title">Home</string>
    <string name="about_desc">About MiceWine</string>
    <string name="general_settings">General Settings</string>
    <string name="exit">Exit</string>
    <string name="open_keyboard">Open Keyboard</string>
    <string name="box64_settings_title">Box64 Settings</string>
    <string name="box64_settings_desc">Configure Box64</string>
    <string name="wine_settings_title">Wine Settings</string>
    <string name="wine_settings_desc">Configure Wine</string>
    <string name="display_settings_title">Display Settings</string>
    <string name="display_settings_desc">Configure Display</string>
    <string name="driver_settings_title">Drivers Settings</string>
    <string name="driver_settings_desc">Configure GPU Drivers</string>
    <string name="env_settings_title">Environment Settings</string>
    <string name="env_settings_desc">Modify Environment Variables</string>
    <string name="env_add_action">Add Environment Variable</string>
    <string name="env_edit_action">Edit Environment Variable</string>
    <string name="env_key">Name</string>
    <string name="env_value">Value</string>
    <string name="shortcuts_title">Shortcuts</string>
    <string name="stretch_display">Stretch Display</string>
    <string name="display_resolution_title">Display Resolution</string>
    <string name="display_resolution_desc">Change Virtual Display Resolution</string>
    <string name="select_driver_title">Select Driver</string>
    <string name="select_driver_desc">Select Driver to use</string>
    <string name="null_desc" translatable="false">" "</string>
    <string name="select_dxvk_title">Select DXVK Version</string>
    <string name="select_wined3d_title">Select WineD3D Version</string>
    <string name="select_d3dx_title">Select DirectX 9, 10, 11 Renderer</string>
    <string name="select_gl_profile_title">Select OpenGL Profile</string>
    <string name="select_gl_profile_desc">Select a OpenGL Profile</string>
    <string name="select_wined3d_desc">Select WineD3D Version</string>
    <string name="select_dxvk_hud_preset_title">Select DXVK HUD Preset</string>
    <string name="select_dxvk_hud_preset_desc">Select DXVK HUD Preset for more or less information</string>
    <string name="controller_mapper_title">Controller Mapper</string>
    <string name="controller_mapper_desc">Configure your Gamepad</string>
    <string name="no_controllers_connected">No Controllers Connected.</string>
    <string name="connected_controller">Connected Controller: %1$s</string>
    <string name="dead_zone_title">Dead Zone</string>
    <string name="mouse_sensibility_title">Virtual Mouse Sensibility</string>
    <string name="open_close_virtual_controller">Open/Close Virtual Controller</string>
    <string name="welcome_text">Welcome to MiceWine!</string>
    <string name="continue_text">Continue</string>
    <string name="confirm_text">Confirm</string>
    <string name="get_file_permission_text">Allow File Management Permission</string>
    <string name="extracting_resources_text">"Extracting Files…\nIt may take a while"</string>
    <string name="extracted_resources_text">Extraction Done!</string>
    <string name="extracting_from_assets">Extracting From Assets…</string>
    <string name="checking_rat_type">Checking Rat File Type…</string>
    <string name="invalid_rootfs_rat_file">Invalid RootFS Rat File.</string>
    <string name="edit_controller_mapping">Edit Controller Mapping</string>
    <string name="edit_virtual_controller_mapping">Edit Virtual Controller Mapping</string>
    <string name="remove_game_item">Delete</string>
    <string name="executable_already_added">Executable Already Added</string>
    <string name="select_executable_file">Select a .exe/.bat file</string>
    <string name="rename_game_item">Rename</string>
    <string name="incompatible_selected_file">Selected File is Incompatible</string>
    <string name="new_name_text">Type a New Name</string>
    <string name="enable_ram_counter">Enable/Disable Ram Counter</string>
    <string name="enable_ram_counter_desc">Enable or Disable RAM Counter on Screen</string>
    <string name="selected_controller_preset">Selected Controller Preset</string>
    <string name="mouse_text">Mouse</string>
    <string name="keyboard_text">Keyboard</string>
    <string name="controller_preset_create_text">Type a Name</string>
    <string name="remove_last_preset_error">The Last Preset Cannot be Removed</string>
    <string name="edit_game_icon">Edit Icon</string>
    <string name="edit">Edit</string>
    <string name="add_game_to_home">Create Shortcut on Launcher</string>
    <string name="cancel_text">Cancel</string>
    <string name="remove_game_item_warning">Are you sure you want to remove it?</string>
    <string name="enable_cpu_counter">Enable/Disable CPU Usage Counter</string>
    <string name="enable_cpu_counter_desc">Enable or Disable CPU Usage on Screen</string>
    <string name="virtual_controller_mapper_title">Virtual Controller Mapper</string>
    <string name="mesa_vk_wsi_present_mode_title" translatable="false">MESA_VK_WSI_PRESENT_MODE</string>
    <string name="tu_debug_title" translatable="false">TU_DEBUG</string>
    <string name="add_button">Add Button</string>
    <string name="add_virtual_axis">Add Virtual Axis</string>
    <string name="file_manager_title">File Manager</string>
    <string name="create_shortcut_on_home">Create Shortcut on Home</string>
    <string name="execute_exe">Execute</string>
    <string name="creating_wine_prefix">Creating Wine Prefix…</string>
    <string name="select_rootfs">Select RootFS</string>
    <string name="enable_debug_info">Enable/Disable Debug Info</string>
    <string name="enable_debug_info_desc">Enable or Disable Debug Info on Screen</string>
    <string name="open_log_viewer">Open Log Viewer</string>
    <string name="controller_virtual_mapper_desc">Configure On-Screen Controllers</string>
    <string name="select_vkd3d_title">Select VKD3D Version</string>
    <string name="wine_esync_title">Enable or Disable Wine ESync (experimental)</string>
    <string name="wine_log_level_title">Wine Log Level</string>
    <string name="save_text">Save</string>
    <string name="create_lnk">Create .lnk file</string>
    <string name="name">Name</string>
    <string name="app_arguments">Launch Arguments</string>
    <string name="selected_box64_profile">Selected Box64 Profile</string>
    <string name="selected_virtual_controller_profile">Selected Virtual Controller Profile</string>
    <string name="selected_controller_profile">Selected Controller Profile</string>
    <string name="export_preset">Export Preset</string>
    <string name="controller_mapping_type">Controller Mapping Type</string>
    <string name="virtual_controller_settings">Virtual Controller Settings</string>
</resources>