<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/executeExe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/execute_exe">
    </item>
    <item
        android:id="@+id/addToHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/create_shortcut_on_home">
    </item>
    <item
        android:id="@+id/createLnk"
        android:title="@string/create_lnk" />
    <item
        android:id="@+id/renameFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/rename_game_item">
    </item>
    <item
        android:id="@+id/deleteFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/remove_game_item">
    </item>
</menu>


