<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_back"
        android:title="@string/exit">
    </item>
    <item
        android:id="@+id/openCloseKeyboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_keyboard"
        android:title="@string/open_keyboard">
    </item>
    <item
        android:id="@+id/setScreenStretch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_display"
        android:title="@string/stretch_display">
    </item>
    <item
        android:id="@+id/openLogViewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_log"
        android:title="@string/open_log_viewer">
    </item>
    <item
        android:id="@+id/openCloseOverlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_joystick"
        android:title="@string/open_overlay">
    </item>
    <item
        android:id="@+id/editVirtualControllerMapping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_joystick"
        android:title="@string/edit_virtual_controller_mapping">
    </item>
    <item
        android:id="@+id/editControllerMapping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_joystick"
        android:title="@string/edit_controller_mapping">
    </item>
</menu>