<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_shortcuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_home"
        android:title="@string/shortcuts_title">
    </item>
    <item
        android:id="@+id/nav_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_settings_outline"
        android:title="@string/settings_title">
    </item>
    <item
        android:id="@+id/nav_file_manager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_folder"
        android:title="@string/file_manager_title">
    </item>
    <item
        android:id="@+id/nav_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_info_outline"
        android:title="@string/about_title"
        android:visible="false"></item>
</menu>


