<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Grupo com comportamento checkable (opcional) -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/exitButton"
            android:icon="@drawable/ic_back"
            android:title="@string/exit" />
        <item
            android:id="@+id/addButton"
            android:icon="@drawable/a_button"
            android:title="@string/add_button" />
        <item
            android:id="@+id/addVAxis"
            android:icon="@drawable/l_up"
            android:title="@string/add_virtual_axis" />
    </group>
    <!-- Exemplo de item extra para ajuste de opacidade (opcional) -->
    <!--
    <item
        android:id="@+id/adjustOpacity"
        android:icon="@drawable/ic_opacity"
        android:title="@string/adjust_opacity" />
    -->
</menu>
