<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/Theme.MiceWine"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:importantForAccessibility="no"
            android:src="@drawable/default_icon"
            android:padding="6dp"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.ExtraSmall">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>

            <EditText
                android:id="@+id/editTextNewName"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                tools:ignore="LabelFor">
            </EditText>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/appArgumentsText"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/app_arguments">
    </TextView>

    <EditText
        android:id="@+id/appArgumentsEditText"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:inputType="text"
        tools:ignore="LabelFor">
    </EditText>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/selected_controller_profile">
    </TextView>

    <Spinner
        android:id="@+id/selectedControllerProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    </Spinner>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/selected_virtual_controller_profile">
    </TextView>

    <Spinner
        android:id="@+id/selectedVirtualControllerProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    </Spinner>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginStart="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/selected_box64_profile">
    </TextView>

    <Spinner
        android:id="@+id/selectedBox64Profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
    </Spinner>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_text">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</LinearLayout>
