<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PresetManagerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/exit"
            android:src="@drawable/ic_back">
        </ImageButton>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/controllerMapperToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="@string/controller_mapper_title">
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <TextView
        android:id="@+id/controllerConnected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/no_controllers_connected"
        android:padding="8dp">
    </TextView>

    <FrameLayout
        android:id="@+id/presetManagerContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="10dp">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/importPresetFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:importantForAccessibility="no"
            android:layout_margin="10dp"
            android:src="@android:drawable/btn_default">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPresetFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:importantForAccessibility="no"
            android:layout_margin="10dp"
            android:src="@android:drawable/ic_input_add">
        </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </LinearLayout>

</LinearLayout>